--- a/Styles/AlleUebungen.css
+++ b/Styles/AlleUebungen.css
@@ -184,7 +184,7 @@ p {
   text-transform: uppercase;
   font-size: 13px;
   color: #fff;
-  padding: 4px 10px;
+  padding: 4px 8px;
   border-radius: 2px;
 }
 .Leicht .category-name{
@@ -212,16 +212,12 @@ p {
   color: #fff;
   opacity: 0.8;
   padding: 5px 0 5px 15px;
+  margin-bottom: 5px;
 }
-.post-content-top span{
-  padding-right: 20px;
-}
-.post-content-top .fa-comment, .post-content-top .fa-calendar{
-  padding-right: 5px;
-}
+
 .post-content h2{
   font-size: 22px;
-  padding: 12px 0;
+  padding: 5px 0;
   font-weight: 400;
 }
 .post-content p{
