--- a/Styles/EinzelÜbung.css
+++ b/Styles/EinzelÜbung.css
@@ -107,7 +107,7 @@ font-size: 32px;
   width: 800px;
   height: 500px;
   margin: 10px 29%;
-  background: #1D212B;
+  background: transparent;
 }
 
 .img-slider .slide{
@@ -124,8 +124,9 @@ font-size: 32px;
 }
 
 .img-slider .slide img{
+  margin: 0 32%;
   z-index: 1;
-  width: 100%;
+  height: 500px;
   border-radius: 5px;
 }
 
