--- a/Styles/Contact.css
+++ b/Styles/Contact.css
@@ -89,6 +89,7 @@ header .navigation a:hover{
   color: black;
   background-color: white;
   padding-top: 10px;
+  margin-top: -250px;
 }
 
 
@@ -174,7 +175,7 @@ header .navigation a:hover{
 }
 
 .body{
-  background: #transparent;
+  background: transparent;
   min-height: 100vh;
   display: flex;
   align-items: center;
